# Pegintichat

./: .env  .env.example  .gitignore  .gitmessage.txt  AdBanner.jsx  CHANGELOG.md  CNAME  CODE _OF_CONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Config.py  LICENSE  Langdetect.py  Manifest.json  Nano PEGINTI.py  Nano langdetect.py  PEGINTI.py  PEGINTICHAT  PEGINTICHAT ROADMAP  PEGINTICHAT architecture  Packagé.json  Peginti Identity.py  Protocol-backup-2026-02-20T18-05-40-780Z-backup-2026-02-20T18-06-15-984Z-backup-2026-02-20T18-06-55-200Z.js  README.md  ROADMAP.md  SECURITY.md  Test SSH signing  Utiles.py  Utils-backup-2026-02-20T18-05-40-808Z-backup-2026-02-20T18-06-16-010Z.js  VERSION.md  api-backup-2026-02-20T18-05-40-843Z-backup-2026-02-20T18-06-16-029Z-backup-2026-02-20T18-06-55-291Z.js  badges  bo-oivini-activate.sh  bo-oivini-cerveau.js  bo-oivini-noyau.js  boivini_ultra_intelligence_v1.yaml  charte-reproduction.md  chat-peginti.sh  config.py  dashboard-peginti.drawio  (+71 more)
archives/: check-peginti.sh  cloudflare-always-online.json  cloudflare-cache-all.json  doctrine.json  inject-doctrine.sh  memory.js  path  peginti-doctrine.json  purge-peginti.sh  start.sh  test-curl.sh  test-wounanet.js  test.sh
bo-oivini/: charte-generale.md  gardien.js  index.js
components/: AdBanner.jsx  footer.html  header.html  premium.html  public.html
css/: style.css
data/: doctrine.json
db/: doctrine.json  peginti.json
docs/: index.md
ecosystem/: ecosystem.config.js
js/: app.js
modules/: bip.js  bipScanner.js  collab.js  matrice.js  mirap.js  mirap.module.json  philo.js  (+3 more)
(+159 files in other folders)
