[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peginti"
version = "1.0.0"
description = "Intelligence artificielle pour la conversation"
authors = [
    { name = "Tomo Ombede Barnabé Bertrand", email = "bertrandtomo7@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "nltk",
    "langdetect",
    "flake8",
    "bandit",
    "coverage"
]

[tool.setuptools.packages.find]
where = ["."]
